<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fielden</groupId>
    <artifactId>platform-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.0.4-SNAPSHOT</version>
    <name>Trident Genesis Platform Parent</name>
    <description>
        Trident Genesis is a software application platform designed for development of EAM/ERP type applications.
        Its main goal is to provide a holistic solution for development of information system with domain oriented approach.
    </description>
    <url>https://github.com/fieldenms/tg</url>
    <inceptionYear>2008</inceptionYear>
    <organization>
        <name>Fielden Management Services</name>
        <url>http://www.fielden.com.au/</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>4.13.2</junit.version>
        <assertj.version>3.27.3</assertj.version>
        <hibernate.version>5.4.33.Final</hibernate.version>
        <postgresql.version>42.7.5</postgresql.version>
        <mssql.version>12.10.0.jre11</mssql.version>
        <HikariCP.version>6.3.0</HikariCP.version>
        <javapoet.version>1.13.0</javapoet.version>
        <antlr.version>4.13.2</antlr.version>
    </properties>

    <modules>
        <module>platform-annotation-processors</module>
        <module>platform-annotations</module>
        <module>platform-db-evolution</module>
        <module>platform-dao</module>
        <module>platform-web-resources</module>
        <module>platform-pojo-bl</module>
        <module>platform-web-ui</module>
        <module>platform-benchmark</module>
        <module>platform-eql-grammar</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>21</release>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <arg>-J-Xss10M</arg>
                            <arg>-J-Xms256m</arg>
                            <arg>-J-Xmx4096m</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <doclint>none</doclint>
                        <detectJavaApiLink>false</detectJavaApiLink>
                        <additionalOptions>-Xdoclint:none</additionalOptions>
                        <additionalJOption>-Xdoclint:none</additionalJOption>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>enforce-property</id>
                        <phase>test</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireProperty>
                                    <property>databaseUri.prefix</property>
                                    <message>The value for property "databaseUri.prefix" is required. You can set it as "-DdatabaseUri.prefix=[JDBC URI pattern]".</message>
                                </requireProperty>
                                <requireProperty>
                                    <property>fork.count</property>
                                    <message>The value for property "fork.count" is required. You can set it as "-Dfork.count=2".</message>
                                </requireProperty>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <forkCount>${fork.count}</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-server -Xms256m -Xmx1024m</argLine>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <databaseUri>${databaseUri.prefix}${surefire.forkNumber}</databaseUri>
                        <loadDdlScriptFromFile>false</loadDdlScriptFromFile>
                        <saveDdlScriptToFile>false</saveDdlScriptToFile>
                        <legacyTests.databaseUri>./src/test/resources/db/TEST_DB_LEGACY_${surefire.forkNumber}</legacyTests.databaseUri>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <!-- explicitly define maven-deploy-plugin after other to force exec order -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <types>jar,test-jar,javadoc,sources</types>
                </configuration>                
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-api</artifactId>
                        <version>1.11.2</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>1.11.2</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/fieldenms/tg/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>github-tg</id>
            <name>GitHub fieldenms Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/fieldenms/tg</url>
        </repository>
        <snapshotRepository>
            <id>github-tg</id>
            <name>GitHub fieldenms Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/fieldenms/tg</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:git@github.com:fieldenms/tg.git</connection>
        <url>scm:git:git@github.com:fieldenms/tg.git</url>
        <developerConnection>scm:git:git@github.com:fieldenms/tg.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
</project>
